--- a/index.html
+++ b/index.html
@@ -1,22 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raya's Portfolio</title>
+    <h1>
+        <title>My Resume</title>
+    </h1>
 </head>
 
 <body>
-    <h1>Raya's Portfolio</h1>
-    <h2>I'm A Web Dev!</h2>
-    <hr/>
-    <h3><a href="./public/movies.html">Movie Ranking Project</a></h3>
-    <img src="./assets/moviessc.png" height="200"/>
-    <h3><a href="./public/bday.html">Birthday Invite Project</a></h3>
-    <img src="./assets/bdaysc.png" height="200"/>
-    <hr/>
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <h1>Raya El Husein</h1>
+    <img src="./raya pic.jpg" height="200">
+
+    <ul>
+        <li>
+            <h2>Summary:</h2>
+            <h3>I have just finished Angela Yu's bootcamp and
+                am looking forward to a Web Dev job!
+            </h3>
+        </li>
+
+        <hr />
+
+        <li>
+            <h2>Education:</h2>
+            <h3>I've gained my skills through online courses.</h3>
+        </li>
+
+        <hr />
+
+        <li>
+            <h2>Work Experience:</h2>
+            <h3>None.</h3>
+        </li>
+
+        <hr />
+
+        <li>
+            <h2>Skills:</h2>
+            <h3>Have passed programming fundamentals and Advanced
+                with Javascript, currently learning HTML & CSS!
+            </h3>
+        </li>
+
+        <hr />
+
+        <li>
+            <h2>Awards, Certifications, Or Other Achievements</h2>
+            <h3>Throughout all of the courses I've finished, I have
+                recieved 2 certificates and 1 yet to come from
+                Angela Yu's bootcamp.
+            </h3>
+        </li>
+
+        <hr />
+    </ul>
+    <a href="./contact.html">Contact Me</a>
+    <footer>
+        <p>© 2023 Udemy Resume</p>
+    </footer>
+
+
 </body>
 
 </html>
